<resources>
    <string name="app_name">First Application</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="register_text">Don\'t have an Account?</string>
    <string name="error_field_required">This field is required</string>
    <string name="welcome_text">Welcome</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_change">Change</string>
    <string name="action_log_out">Logout</string>
    <string name="prompt_current_pass">Current Password</string>
    <string name="prompt_new_pass">New Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>
    <string name="action_logout">Logout</string>
    <string name="action_changePassword">Change Password</string>
</resources>
