<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.firstapplication.ChangePasswordActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:stateListAnimator="@null"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/current_pass_field"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:hint="@string/prompt_current_pass"
            android:textColorHint="#757575"
            android:textColor="#000"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/new_pass_field"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:hint="@string/prompt_new_pass"
            android:textColorHint="#757575"
            android:textColor="#000"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirm_pass_field"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:hint="@string/confirm_new_pass"
            android:textColorHint="#757575"
            android:textColor="#000"
            android:inputType="textPassword"/>

    </LinearLayout>

</LinearLayout>
